<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.computron.myapplication.MainActivity">


    <com.example.computron.rc_controller.MjpegView
        android:id="@+id/mv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/manual_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autonomous_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/default_velocity"
        android:editable="false"
        android:inputType="none"
        android:layout_below="@+id/imageViewCompass"
        android:layout_toRightOf="@+id/layout_joystick"
        android:layout_toEndOf="@+id/layout_joystick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_string"
        android:id="@+id/disconnect_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageViewCompass"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img_compass"
        android:contentDescription="@string/compass_info_string"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/image_button_bg"
        android:layout_above="@+id/manual_button"
        android:layout_centerHorizontal="true">
    </RelativeLayout>

</RelativeLayout>
